--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,10 @@
+@import "../node_modules/angular-material/angular-material";
+@import "../node_modules/angular-material/angular-material.min.css";
+
 $font-stack: Helvetica, sans-serif;
 $blue: #007DC3;
 
 body {
   font: 100% $font-stack;
   color: $blue;
-  padding: 1em 0.5em;
 }
