--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,16 @@
 @import "../node_modules/angular-material/angular-material";
 @import "../node_modules/angular-material/angular-material.min.css";
+@import "colours";
+@import url(https://fonts.googleapis.com/icon?family=Material+Icons);
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,500,700);
 
-$font-stack: Helvetica, sans-serif;
+$font-stack: 'Roboto', Helvetica, sans-serif;
 $blue: #007DC3;
 
 body {
   font: 100% $font-stack;
-  color: $blue;
+  color: $blue-grey-500;
+  div[ui-view] {
+    height: 100vh;
+  }
 }
